@@ -1,6 +1,7 @@
 2009-??-?? dispatcher 0.9.97
 
 * add more detailed timeout report
+* add handling of task elapsed time if value returned from worker
 
 2009-07-20 dispatcher 0.9.96
 
